syntax = "proto3";

package chatroom;

service ChatroomService {
  rpc CreateChatroom(CreateChatroomRequest) returns (CreateChatroomResponse);
  rpc GetMyChatrooms(ListMyChatroomsRequest)returns (ListMyChatroomsResponse);
}

message CreateChatroomRequest {
  int64 productId = 1;
  int64 senderId = 2;
  int64 receiverId = 3;
}

message CreateChatroomResponse {
  int64 chatroomId = 1;
}

message ListMyChatroomsRequest {
  int64 memberId = 1;
}

message ChatroomSummary{
  int64 chatroomId = 1;
  string roomName = 2;
  string latestMessage = 3;
  int64 productId = 4;
  int64 opponentId = 5; //상대방 아이디
  int64 latestTime = 6;
  string opponentProfileUrl =7;
  string opponentNickname =8;

}
message ListMyChatroomsResponse {
  repeated ChatroomSummary items = 1;
}