package hanium.product_service.service;

import hanium.common.proto.product.*;
import hanium.product_service.dto.request.CreateChatroomRequestDTO;
import hanium.product_service.dto.response.ChatMessageResponseDTO;
import hanium.product_service.dto.response.CreateChatroomResponseDTO;
import hanium.product_service.dto.response.GetMyChatroomResponseDTO;
import io.grpc.stub.StreamObserver;
import java.util.List;

public interface ChatService{

    CreateChatroomResponseDTO createChatroom(CreateChatroomRequestDTO requestDTO);

    // ðŸ‘‡ BiDi Streamingìš© ë©”ì„œë“œ ì¶”ê°€
    StreamObserver<ChatMessage> chat(StreamObserver<ChatResponseMessage> responseObserver);

    //ì±„íŒ…ë°© ì¡°íšŒ
     List<GetMyChatroomResponseDTO> getMyChatrooms(Long memberId);


     //ì±„íŒ…ë°©ë³„ ë©”ì‹œì§€ ì¡°íšŒ
    List<ChatMessageResponseDTO> getAllMessageByChatroomId(Long chatroomId);
}
